@@ -3,6 +3,7 @@
 Groupe composé de MOY Kélian, THUILLIER Killian, CHRISTIEN Adrien, HOYAU Christophe
 
 ## Créer un .jar
+### Création du jar
 exporter la variable d'environnement de javafx
 ```sh
 export JAVAFX_HOME=/path/to/your/javafx/home
@@ -11,6 +12,12 @@ export JAVAFX_HOME=/path/to/your/javafx/home
 clean build gradle puis créé le jar, le lance (pour tester) puis le déplace en le nommant `App.jar` dans le dossier `dist/App.jar`
 ```sh
 ./gradlew clean build && ./gradlew shadowjar && java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar build/libs/my-application-1.0.0.jar && cp build/libs/my-application-1.0.0.jar dist/App.jar
+
+```
+### Run le jar
+
+```sh
+java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar dist/App.jar
 
 ```
 
@@ -28,3 +35,6 @@ Fixer les bugs de la veille et avoir une archive JAR exécutable.
 
 Livrable prévu: page d'acceuil, création des objets bien et service ainsi que leur gestion, page Profil.
 
+### Pour Mercredi 10/01
+
+Livrable prévu : profil, css, classes du chat, création d'annonces
